# tarkahq-cli

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml
.github/workflows/: ci.yml
docs/: cli_commands.md  cli_distribution.md  training_customer_quickstart.md  training_customer_ssh_handoff.md  training_request.example.yaml  training_request_template.md
tarka_cli/: __init__.py  config.py  main.py
tarka_cli/resources/docs/: training_customer_handoff_template.md
tarka_cli/resources/scripts/: create_training_run_summary.sh  training_preflight.sh
tests/: test_cli_smoke.py
