[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tarkahq"
version = "0.1.0"
description = "Tarka CLI for inference smoke tests and operator-assisted training access"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27",
  "typer>=0.12",
]

[project.scripts]
tarka = "tarka_cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["tarka_cli*"]
