[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tarkahq"
version = "0.1.1"
description = "Tarka CLI for inference smoke tests and operator-assisted training access"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
  { name = "TarkaHQ" },
]
keywords = ["tarka", "cli", "inference", "training", "gpu", "llm"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development",
  "Topic :: System :: Distributed Computing",
]
dependencies = [
  "httpx>=0.27",
  "typer>=0.12",
]

[project.optional-dependencies]
test = [
  "pytest>=8",
]

[project.urls]
Homepage = "https://tarkahq.com"
Repository = "https://github.com/TarkaHQ/tarkahq-cli"
Issues = "https://github.com/TarkaHQ/tarkahq-cli/issues"

[project.scripts]
tarka = "tarka_cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["tarka_cli*"]

[tool.setuptools.package-data]
tarka_cli = [
  "resources/docs/*",
  "resources/scripts/*",
]
